migrate test for track builder